--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,7 @@
         Take Picture <ion-icon name="camera"></ion-icon>
       </ion-button> -->
 
-        <img [src]="currentImage">
+        <img id="img" [src]="currentImage">
         <div class="centered">
           <ion-button block (click)="playCry()">
             play cry
